/* 
  eng.strings
  CardFortress

  Created by Roberto Corrales on 16/04/23.
  
*/

"mainViewTitle" = "Card Fortress";
"buttonTest" = "Go to other view";
"labelTest" = "Card fortress app";
"increaseQty" = "Increase quantity";
"cardNumberLabel" = "Card Number";
"expirationDateLabel" = "Expiry Date";
"cardHolderNameLabel" = "Name on card";
"cardNameLabel" = "Card Name";
"addCreditCardButtonTitle" = "Add your card";
"addCreditCardTitle" = "New Card";
"cardNumberPlaceHolder" = "0000 0000 0000 0000";
"expirationDatePlaceHolder" = "MM / YY";
"cardHolderNamePlaceHolder" = "Juan Perez";
"cardNamePlaceHolder" = "e.g: Bank Name";
"addYourCardInformation" = "Enter your card information";
"scanYourCard" = "Scan your card";
"cvvPlaceHolder" = "123";
"cvvLabel" = "cvv";
"editCreditCardButtonTitle" = "Save";
"editCreditCardTitle" = "Edit Card";
"snackBarCardSaved" = "Card saved";

"cfTextFieldGenericErrorMessage" = "This field is required.";
"snackBarCardAdded" = "The Card Was Added Successfuly";
"invalidEmail" = "Invalid email";
"wrongPassword" = "Wrong password";
"unknownError" = "Unknown error";
"creditCardFortressHeader" = "Credit Card Fortress";
"login" = "Log in";
"yourEmail" = "Your email";
"yourPassword" = "Your password";
"rememberMe" = "Remember me";
"signUp" = "Sign Up";
"orConnectWith" = "or connect with";
"passwordsDoNotMatch" = "Passwords do not match";
"deleteAllCreditCards" = "Delete all credit cards";
"delete" = "Delete";
"cancel" = "Cancel";
"signOut" = "Sign Out";
"confirm" = "Confirm";
